# simple-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: index.py  rag.py  vectorstore.py
